refactored parent pom